# kind

./: CMakeLists.txt  README.md
include/kind/: Kind.hpp
test/: CMakeLists.txt  Simple.cpp
